--- a/week3/index.html
+++ b/week3/index.html
@@ -53,25 +53,25 @@
         <div class="services-container">
 
           <div class="service-column">
-            <img src="images/Flights.png" alt="Illustration representing flight bookings">
+            <img src="images/4.jpeg" alt="Illustration representing flight bookings">
             <h3>Flight and Transport Bookings</h3>
             <p>One of the primary services offered by travel agencies is the reservation of flights.</p>
           </div>
 
           <div class="service-column">
-            <img src="images/ladies facial.png" alt="Illustration of a hotel">
+            <img src="images/3.jpeg" alt="Illustration of a hotel">
             <h3>Accommodation Reservations</h3>
             <p>Travel agencies have partnerships and affiliations with a wide range of hotels.</p>
           </div>
 
           <div class="service-column">
-            <img src="images/tour packages.png" alt="Illustration representing tour packages">
+            <img src="images/1.jpeg" alt="Illustration representing tour packages">
             <h3>Itinerary Planning and Tour Packages</h3>
             <p>Travel agencies offer customized and pre-packaged tours to suit the preferences of travelers.</p>
           </div>
 
           <div class="service-column">
-            <img src="images/reservation.png" alt="Illustration representing activities and excursions">
+            <img src="images/2.jpeg" alt="Illustration representing activities and excursions">
             <h3>Activity & Excursion Bookings</h3>
             <p>We curate and book a diverse range of local activities and excursions for unforgettable experiences.</p>
           </div>
